erDiagram
    countries ||--o{ regions : "تحتوي"
    regions ||--o{ cities : "تحتوي"
    cities ||--o{ districts : "تحتوي"
    districts ||--o{ plans : "تحتوي"
    plans ||--o{ parcels : "يحتوي"
    parcels ||--o{ parcels : "وحدات فرعية (شقق)"
    parcels ||--o{ deeds : "صكوك (تاريخي)"
    deeds ||--o{ deed_owners : "ملاك الصك"
    owners ||--o{ deed_owners : "يملك حصة"
    parcels ||--|| parcel_boundaries : "حدود/أبعاد"
    engineering_offices ||--o{ parcel_boundaries : "نفّذ الرفع"
    parcels ||--o{ survey_decisions : "قرارات مساحية"
    parcels ||--o{ parcel_photos : "صور"
    parcels ||--o{ modification_requests : "طلبات تعديل"
    owners ||--o{ modification_requests : "قدّمها"
    users ||--o{ audit_logs : "سجل"

    countries {
        bigint id PK
        string name_ar "الاسم بالعربي"
        string name_en
        string iso_code "SA, AE..."
        timestamp created_at
        timestamp updated_at
    }

    regions {
        bigint id PK
        bigint country_id FK
        string name_ar "اسم المنطقة"
        string name_en
        timestamp created_at
        timestamp updated_at
    }

    cities {
        bigint id PK
        bigint region_id FK
        string name_ar "اسم المدينة - كل بلدة/محافظة كصف"
        string name_en
        timestamp created_at
        timestamp updated_at
    }

    districts {
        bigint id PK
        bigint city_id FK
        string name_ar "اسم الحي"
        string name_en
        timestamp created_at
        timestamp updated_at
    }

    plans {
        bigint id PK
        string plan_no "رقم المخطط - Plan_No"
        bigint district_id FK
        timestamp created_at
        timestamp updated_at
    }

    owners {
        bigint id PK
        string name "اسم المالك"
        string national_id "Woner_ID"
        string phone
        string email
        string whatsapp
        timestamp created_at
        timestamp updated_at
    }

    parcels {
        bigint id PK
        string parcel_no "رقم القطعة"
        string geo_id "Geo_ID فريد - مفتاح المزامنة"
        bigint plan_id FK
        bigint parent_parcel_id FK "null للأرض، أو id العمارة للشقة"
        geometry geom "MultiPolygon, EPSG:4326"
        string asset_type "أرض/شقة/عمارة/فيلا/مستودع"
        string land_transaction "مباعة/مؤجرة/قيد البيع/خاصة"
        string allocation_method "محدد بدقة/حسب الموقع العام/لم يحدد"
        string fall_in "مخطط زراعي/مخطط بلدية"
        string source_gdb_id "OBJECTID من ArcGIS"
        timestamp last_synced_at
        timestamp created_at
        timestamp updated_at
    }

    deeds {
        bigint id PK
        bigint parcel_id FK
        string deed_no "رقم الصك"
        string deed_date_hijri "تاريخ هجري كنص"
        string deed_status "محدث/قديم"
        string deed_class "زراعي/سكني/صناعي"
        numeric deed_area "مساحة الصك (Area من ArcGIS)"
        timestamp created_at
        timestamp updated_at
    }

    deed_owners {
        bigint id PK
        bigint deed_id FK
        bigint owner_id FK
        numeric ownership_share "نسبة الملكية % - افتراضي 100"
        timestamp created_at
        timestamp updated_at
    }

    parcel_boundaries {
        bigint id PK
        bigint parcel_id FK
        string n_border
        string s_border
        string e_border
        string w_border
        numeric n_dim
        numeric s_dim
        numeric e_dim
        numeric w_dim
        numeric measured_area "المساحة حسب الطبيعة"
        string survey_date "تاريخ الرفع المساحي - ينتظر من ArcGIS"
        bigint engineering_office_id FK "nullable"
        timestamp created_at
        timestamp updated_at
    }

    engineering_offices {
        bigint id PK
        string name "اسم المكتب الهندسي"
        string license_no "رقم الترخيص"
        string phone
        string email
        timestamp created_at
        timestamp updated_at
    }

    survey_decisions {
        bigint id PK
        bigint parcel_id FK
        string qrar_source "بلدي/مكتب هندسي/بدون"
        string qrar_no "رقم القرار"
        string report_no
        string folder
        timestamp created_at
        timestamp updated_at
    }

    parcel_photos {
        bigint id PK
        bigint parcel_id FK
        string photo_url "رابط - الصورة على Drive"
        string photo_type "جوية/أرضية"
        timestamp created_at
        timestamp updated_at
    }

    modification_requests {
        bigint id PK
        bigint parcel_id FK
        bigint requested_by FK "owner_id"
        string field_name
        string old_value
        string new_value
        string status "pending/sent/applied/rejected"
        text notes
        timestamp resolved_at
        timestamp created_at
        timestamp updated_at
    }

    sync_log {
        bigint id PK
        timestamp sync_started_at
        timestamp sync_finished_at
        int records_imported
        int records_updated
        string status
        text notes
        timestamp created_at
    }

    users {
        bigint id PK
        string name "اسم المستخدم"
        string email
        string password "مشفر"
        string phone "للـ OTP"
        string role "admin/viewer"
        boolean is_active
        timestamp last_login_at
        string last_login_ip
        timestamp created_at
        timestamp updated_at
    }

    audit_logs {
        bigint id PK
        bigint user_id FK
        string action "login/download/export/view"
        string target_type "parcel/deed/document"
        bigint target_id
        string ip_address
        string user_agent
        timestamp created_at
    }
